tests/fixtures/invalid/anonymous_aggregate_return_type.c
struct { int x; } make(void) {
    struct { int x; } value = {1};
    return value;
}

int main(void) {
    return 0;
}
